--- a/index.html
+++ b/index.html
@@ -3,27 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="node_modules/semantic-ui/dist/semantic.css">
 	<title>what a day</title>
 </head>
 <body>
 	<h1>What day is it ?</h1>
 	<span>Jour</span>
-
-
-	<div class="ui grid">
-
-
-		<div class="three wide column">
-				</div>
-
-	
+	<div class="overlay">
 	<input id="jour" type="number" name="jour">
-	
-	
-	<div class="three wide column">
-	</div>
-
 	<span>Mois</span>
 	<select id="mois">
 		<option></option>
@@ -40,18 +26,15 @@
 		<option>novembre</option>
 		<option>décembre</option>
 	</select>
-		<span>Année</span>
-	<div class="three wide column">
-	</div>
-	
+	<span>Année</span>
 	<input id="annee" type="text" name="annee">
-	
-	</div>
-	
-	<button class="ui blue button">Vérifier</button>
+	<button id="button">Verifier</button>
+	<div id="message" class="error"></div>
+	<div class="overlay"></div>
+	<button id="restart">Recommencer</button>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="node_modules/momentjs/moment.js"></script>
-	<script src="node_modules/semantic-ui/dist/semantic.js"></script>
+	<script src="node_modules/moment/min/moment.min.js"></script>
+
 	<script src="app.js"></script>
 </body>
 </html>
