Ajout function affiche the week

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -34,7 +34,7 @@
 	<button id="restart">Recommencer</button>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/moment/min/moment.min.js"></script>
-
+	<script src="node_modules/moment/locale/fr.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
